# drf-localize

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg  setup.py
drf_localize/: __init__.py  asgi.py  helpers.py  middlewares.py  models.py  serializers.py  settings.py  urls.py
drf_localize/applications/: helpers.py  managers.py  mixins.py  permissions.py  serializers.py  views.py
drf_localize/commons/: errors.py  permissions.py  serializers.py  views.py
drf_localize/commons/helpers/: __init__.py  classes.py  views.py
drf_localize/core/: __init__.py
drf_localize/fixtures/: localizekeys.json  localizelanguages.json
drf_localize/migrations/: 0001_initial.py
drf_localize_test/: serializers.py  settings.py  urls.py  views.py
drf_localize_test/test/: models.py
drf_localize_test/test/migrations/: 0001_initial.py  0002_blog_i18n.py
